# python_package_sample

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
package/: __init__.py
src/python_package_sample/: sample_module.py
tests/: test_sample_module.py
