[flake8]
max-line-length=100
ignore=W293, W504
max-complexity=10

[isort]
line_length = 100
force_single_line = true

[metadata]
name = package
version = 0.0.1
url = https://github.com/nokonoko1203/python_package_template
author = nokonoko1203
author_email = nokonoko.1203.777@gmail.com
license_file = LICENSE
description = sample package
long_description = file: README.md

[options]
package_dir = package
packages=find: