[flake8]
max-line-length=100
ignore=W293, W504
max-complexity=10

[isort]
line_length = 100
force_single_line = true

[metadata]
name = package
version = 0.0.1
url = https://github.com/nokonoko1203/python_package_sample
author = nokonoko1203
author_email = nokonoko1203@example.com
license_file = LICENSE
description = This is a sample of how to create a package in python.
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src